--- a/project/homepage/testimonials.html
+++ b/project/homepage/testimonials.html
@@ -238,6 +238,7 @@ loadTestimonials();
 <script>
 async function submitTestimonial() {
   const newTestimonial = {
+    "TestimonialId": 2,
     authorName: document.getElementById("authorName").value,
     productName: document.getElementById("productName").value,
     description: document.getElementById("description").value,
