--- a/project/homepage/testimonials.html
+++ b/project/homepage/testimonials.html
@@ -9,26 +9,28 @@
 <link rel="stylesheet" href="./css/layout.css">
 <link rel="stylesheet" href="./css/greenville.css">
 
-<title>Greenville Associates Enterprise Software |Testimonials Table</title>
- 
+<title>Greenville Associates Enterprise Software | Testimonials</title>
+
 <style>
-    /* Green + Black striped rows */
     .table-striped-green tbody tr:nth-of-type(odd) {
-      background-color: #0a0a0a; /* black */
+      background-color: #0a0a0a;
       color: #fff;
     }
     .table-striped-green tbody tr:nth-of-type(even) {
-      background-color: #0f3d0f; /* dark green */
+      background-color: #0f3d0f;
       color: #fff;
     }
     .table-striped-green thead {
-      background-color: #145214; /* header green */
+      background-color: #145214;
       color: #fff;
     }
 </style>
 </head>
+
 <body>
 <div class="container2">
+
+<!-- NAVIGATION BAR -->
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -48,36 +50,15 @@
         </div>
     </div>
 
-    <div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
-
-  <md-text-button href="index.html" aria-label="Home" title="Home">
-    <span class="material-icons" style="color:white;">home</span>
-  </md-text-button>
-
-  <md-text-button href="userhelp.html" aria-label="Help" title="Help">
-    <span class="material-icons" style="color:white;">help_outline</span>
-  </md-text-button>
-
-  <md-text-button href="usernotices.html" aria-label="Notifications" title="Notifications">
-    <span class="material-icons" style="color:white;">notifications</span>
-  </md-text-button>
-
-  <md-text-button href="login.html" aria-label="Login" title="Login">
-    <span class="material-icons" style="color:white;">login</span>
-  </md-text-button>
-
-  <md-text-button href="logout.html" aria-label="Logout" title="Logout">
-    <span class="material-icons" style="color:white;">logout</span>
-  </md-text-button>
-
-  <md-text-button href="myprofile.html" aria-label="My Profile" title="My Profile">
-    <span class="material-icons" style="color:white;">person</span>
-  </md-text-button>
-
-  <md-text-button href="mycart.html" aria-label="My Cart" title="My Cart">
-    <span class="material-icons" style="color:white;">shopping_cart</span>
-  </md-text-button>
-</div>
+    <div class="right-links" style="display:flex; gap:6px; align-items:center; color:white;">
+        <md-text-button href="index.html"><span class="material-icons" style="color:white;">home</span></md-text-button>
+        <md-text-button href="userhelp.html"><span class="material-icons" style="color:white;">help_outline</span></md-text-button>
+        <md-text-button href="usernotices.html"><span class="material-icons" style="color:white;">notifications</span></md-text-button>
+        <md-text-button href="login.html"><span class="material-icons" style="color:white;">login</span></md-text-button>
+        <md-text-button href="logout.html"><span class="material-icons" style="color:white;">logout</span></md-text-button>
+        <md-text-button href="myprofile.html"><span class="material-icons" style="color:white;">person</span></md-text-button>
+        <md-text-button href="mycart.html"><span class="material-icons" style="color:white;">shopping_cart</span></md-text-button>
+    </div>
 </div>
 
 <header>
@@ -88,7 +69,6 @@
 <nav>
   <ul class="menu">
       <li><a href="#products">Products</a></li>
-
       <li class="dropdown">
           <a href="#deployment">Deployment ▾</a>
           <ul class="dropdown-content">
@@ -97,7 +77,6 @@
               <li><a href="#hybrid">Hybrid</a></li>
           </ul>
       </li>
-
       <li class="dropdown">
           <a href="#licensing">Licensing ▾</a>
           <ul class="dropdown-content">
@@ -107,7 +86,6 @@
               <li><a href="#enterprise">Enterprise License Types</a></li>
           </ul>
       </li>
-
       <li class="dropdown">
           <a href="#pricing">Pricing ▾</a>
           <ul class="dropdown-content">
@@ -118,14 +96,13 @@
               <li><a href="#pricing-utility">Utility Model</a></li>
           </ul>
       </li>
-
       <li><a href="contacts.html">Contact Sales</a></li>
   </ul>
 </nav>
 
 <div class="pageheader">
     <hr>
-    <span align="center"><h4>Testimonials</h4></span>
+    <h4 align="center">Testimonials</h4>
     <hr>
 </div>
 
@@ -136,24 +113,42 @@
   </button>
 </div>
 
+<!-- TESTIMONIAL TABLE -->
 <section class="top-section">
-
-    <table class="table table-striped-green table-bordered text-center align-middle">
-      <thead>
-        <tr>
-          <th>Author</th>
-          <th>Product</th>
-          <th>Description</th>
-          <th>Month</th>
-          <th>Year</th>
-        </tr>
-      </thead>
-      <tbody id="testimonial-body">
-      </tbody>
-    </table>
+<table class="table table-striped-green table-bordered text-center align-middle">
+  <thead>
+    <tr>
+      <th>Author</th>
+      <th>Product</th>
+      <th>Description</th>
+      <th>Month</th>
+      <th>Year</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody id="testimonial-body"></tbody>
+</table>
 </section>
 
 <script>
+let products = [];
+
+// Load products for dropdowns
+async function loadProducts() {
+  const response = await fetch("https://api242.onrender.com/api/products");
+  products = await response.json();
+
+  const addSelect = document.getElementById("productSelect");
+  const editSelect = document.getElementById("editProductSelect");
+
+  products.forEach(p => {
+    const option = `<option value="${p._id}">${p.description}</option>`;
+    addSelect.innerHTML += option;
+    editSelect.innerHTML += option;
+  });
+}
+
+// Load testimonials
 async function loadTestimonials() {
   try {
     const response = await fetch("https://api242.onrender.com/api/testimonials");
@@ -171,6 +166,9 @@ async function loadTestimonials() {
         <td>${item.description}</td>
         <td>${item.month}</td>
         <td>${item.year}</td>
+        <td>
+          <button class="btn btn-warning btn-sm" onclick="openEditModal('${item._id}')">Update</button>
+        </td>
       `;
 
       tbody.appendChild(row);
@@ -181,29 +179,31 @@ async function loadTestimonials() {
   }
 }
 
+loadProducts();
 loadTestimonials();
 </script>
 
-<!-- MODAL FORM -->
-<div class="modal fade" id="testimonialModal" tabindex="-1" aria-labelledby="testimonialModalLabel" aria-hidden="true">
+<!-- ADD TESTIMONIAL MODAL -->
+<div class="modal fade" id="testimonialModal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
 
       <div class="modal-header">
-        <h5 class="modal-title" id="testimonialModalLabel">Add New Testimonial</h5>
+        <h5 class="modal-title">Add New Testimonial</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
 
       <div class="modal-body">
         <form id="testimonialForm">
+
           <div class="mb-3">
             <label class="form-label">Author Name</label>
             <input type="text" class="form-control" id="authorName" required>
           </div>
 
           <div class="mb-3">
-            <label class="form-label">Product Name</label>
-            <input type="text" class="form-control" id="productName" required>
+            <label class="form-label">Product</label>
+            <select class="form-select" id="productSelect" required></select>
           </div>
 
           <div class="mb-3">
@@ -214,9 +214,8 @@ loadTestimonials();
           <div class="row">
             <div class="col-md-6 mb-3">
               <label class="form-label">Month</label>
-              <input type="text" class="form-control" id="month" required>
+              <input type="number" class="form-control" id="month" required>
             </div>
-
             <div class="col-md-6 mb-3">
               <label class="form-label">Year</label>
               <input type="number" class="form-control" id="year" required>
@@ -237,10 +236,13 @@ loadTestimonials();
 
 <script>
 async function submitTestimonial() {
+  const productId = document.getElementById("productSelect").value;
+  const product = products.find(p => p._id === productId);
+
   const newTestimonial = {
-    "TestimonialId": 2,
     authorName: document.getElementById("authorName").value,
-    productName: document.getElementById("productName").value,
+    productId: productId,
+    productName: product.description,
     description: document.getElementById("description").value,
     month: document.getElementById("month").value,
     year: document.getElementById("year").value
@@ -262,7 +264,6 @@ async function submitTestimonial() {
     modal.hide();
 
     document.getElementById("testimonialForm").reset();
-
     loadTestimonials();
 
   } catch (error) {
@@ -271,55 +272,125 @@ async function submitTestimonial() {
 }
 </script>
 
-<section class="middle-columns">
+<!-- UPDATE TESTIMONIAL MODAL -->
+<div class="modal fade" id="editTestimonialModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
 
-    <div class="mid-col">
-        <img src="./images/miami1.jpg" style="width:48%; border-radius:5px;">
-        <img src="./images/miami3.jpg" style="width:48%; border-radius:5px;">
+      <div class="modal-header">
+        <h5 class="modal-title">Update Testimonial</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <div class="modal-body">
+        <form id="editTestimonialForm">
+          <input type="hidden" id="editId">
+
+          <div class="mb-3">
+            <label class="form-label">Author Name</label>
+            <input type="text" class="form-control" id="editAuthorName" required>
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label">Product</label>
+            <select class="form-select" id="editProductSelect" required></select>
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label">Description</label>
+            <textarea class="form-control" id="editDescription" rows="3" required></textarea>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <label class="form-label">Month</label>
+              <input type="number" class="form-control" id="editMonth" required>
+            </div>
+
+            <div class="col-md-6 mb-3">
+              <label class="form-label">Year</label>
+              <input type="number" class="form-control" id="editYear" required>
+            </div>
+          </div>
+
+        </form>
+      </div>
+
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button class="btn btn-primary" onclick="updateTestimonial()">Update</button>
+      </div>
+
     </div>
-
-    <div class="mid-col">
-        <h3>Quick Links</h3>
-        <hr>
-        <ul class="quick-links">
-            <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
-            <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics</a></li>
-            <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>
-            <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>
-            <li><a href="https://www.espn.com" target="_blank">ESPN</a></li>
-            <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
-        </ul>
-    </div>
-
-    <div class="mid-col">
-        <h3>Site Map</h3>
-        <hr>
-        <table class="sitemap-table">
-            <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
-            <tr><td>Licenses</td><td><a href="mylicenses.html">MyLicenses</a></td><td>01/15/2026</td></tr>
-            <tr><td>Usage</td><td><a href="mylicenselogs.html">MyLicenseLogs</a></td><td>01/15/2026</td></tr>
-            <tr><td>Types</td><td><a href="licenseinfo.html">LicenseInfo</a></td><td>01/15/2026</td></tr>
-            <tr><td>Cart</td><td><a href="mycart.html?uid=1">MyCart</a></td><td>01/15/2026</td></tr>
-            <tr><td>TypeReviews</td><td><a href="reviews.html">Reviews</a></td><td>01/15/2026</td></tr>
-        </table>
-    </div>
-
-</section>
-
-<section class="sales">
-<div class="cta" id="contact">
-    <h2>Talk to Sales</h2>
-    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><br>
-    <a href="contacts.html">Contact Sales</a>
+  </div>
 </div>
-</section>
+
+<script>
+async function openEditModal(id) {
+  try {
+    const response = await fetch(`https://api242.onrender.com/api/testimonials/${id}`);
+    const item = await response.json();
+
+    document.getElementById("editId").value = item._id;
+    document.getElementById("editAuthorName").value = item.authorName;
+    document.getElementById("editDescription").value = item.description;
+    document.getElementById("editMonth").value = item.month;
+    document.getElementById("editYear").value = item.year;
+
+    // Pre-select product
+    document.getElementById("editProductSelect").value = item.productId;
+
+    const modal = new bootstrap.Modal(document.getElementById("editTestimonialModal"));
+    modal.show();
+
+  } catch (error) {
+    console.error("Error loading testimonial:", error);
+  }
+}
+
+async function updateTestimonial() {
+  const id = document.getElementById("editId").value;
+  const productId = document.getElementById("editProductSelect").value;
+  const product = products.find(p => p._id === productId);
+
+  const updated = {
+    authorName: document.getElementById("editAuthorName").value,
+    productId: productId,
+    productName: product.description,
+    description: document.getElementById("editDescription").value,
+    month: document.getElementById("editMonth").value,
+    year: document.getElementById("editYear").value
+  };
+
+  try {
+    const response = await fetch(`https://api242.onrender.com/api/testimonials/${id}`, {
+      method: "PUT",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(updated)
+    });
+
+    if (!response.ok) {
+      alert("Error updating testimonial.");
+      return;
+    }
+
+    const modal = bootstrap.Modal.getInstance(document.getElementById("editTestimonialModal"));
+    modal.hide();
+
+    loadTestimonials();
+
+  } catch (error) {
+    console.error("Error updating testimonial:", error);
+  }
+}
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <footer>
     © 2026 Greenville Associates Enterprise Software. All rights reserved.
 </footer>
 
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
