--- a/project/homepage/testimonials.html
+++ b/project/homepage/testimonials.html
@@ -135,7 +135,7 @@ let products = [];
 
 // Load products for dropdowns
 async function loadProducts() {
-  const response = await fetch("https://api242.onrender.com/api/products");
+  const response = await fetch("https://api242.onrender.com/products");
   products = await response.json();
 
   const addSelect = document.getElementById("productSelect");
