--- a/project/homepage/testimonials.html
+++ b/project/homepage/testimonials.html
@@ -102,7 +102,7 @@
 
 <div class="pageheader">
     <hr>
-    <h4 align="center">Testimonials</h4>
+    <h4 align="center">Testimonial Administration</h4>
     <hr>
 </div>
 
