--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -117,7 +117,7 @@
         <hr>
     </div>
 
-    <div class="d-flex justify-content-between align-items-center mb-3">
+    <div style="text-align:right; margin:10px 20px;">
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
             Add Product
         </button>
