--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -24,14 +24,15 @@
             <a href="logout.html">Logout</a>
             <a href="welcome.html">Welcome</a>
             <a href="licenses6.html">BuyNow</a>
-            <a href="products.html">AdminProducts</a>
-            <a href="licensetypes.html">LicenseTypes</a>
-            <a href="mylicenselogs.html">LicenseLogs</a>
-            <a href="mylicenses.html">MyLicenses</a>
-            <a href="testimonials.html">Testimonials</a>
-            <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
+            <a href="mylicenselogs.html">MyLicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="mycart.html?uid=1">MyCart</a>
+            <a href="myprofile.html">MyProfile</a>
             <a href="help.html">Help</a>
+            <a href="testimonials.html">AdminTestimonials</a>
+            <a href="products.html">AdminProducts</a>
+            <a href="licensetypes.html">AdminLicenseTypes</a>
         </div>
     </div>
 <div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
