--- a/project/homepage/licensetypes.html
+++ b/project/homepage/licensetypes.html
@@ -110,10 +110,10 @@
 </nav>
     <div class="pageheader">
         <hr>
-        <span align="center"><h4>License Types</h4></span>
+        <span align="center"><h4>License Type Administrator</h4></span>
         <hr>
     </div>
-    <div class="d-flex justify-content-between align-items-center mb-3">
+  <div style="text-align:right; margin:10px 120px;">
             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
             Add License Type
         </button>
