--- a/project/homepage/contacts.html
+++ b/project/homepage/contacts.html
@@ -75,7 +75,7 @@
 
 <nav>
     <ul class="menu">
-        <li><a href="#products">Products</a></li>
+        <li><a href="licenses6.html">Products</a></li>
 
         <li class="dropdown">
             <a href="#deployment">Deployment ▾</a>
