--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -33,6 +33,7 @@
             <a href="testimonials.html">AdminTestimonials</a>
             <a href="products.html">AdminProducts</a>
             <a href="licensetypes.html">AdminLicenseTypes</a>
+	   <a href="template.html">AdminPageTemplate</a>
         </div>
     </div>
 <div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
@@ -81,7 +82,7 @@
 
 <nav>
     <ul class="menu">
-        <li><a href="#products">Products</a></li>
+        <li><a href="licenses6.html">Products</a></li>
 
         <li class="dropdown">
             <a href="#deployment">Deployment ▾</a>
