--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -69,7 +69,7 @@
 
 <nav>
     <ul class="menu">
-        <li><a href="#products">Products</a></li>
+        <li><a href="licenses6.html">Products</a></li>
         <li class="dropdown">
             <a href="#deployment">Deployment ▾</a>
             <ul class="dropdown-content">
