--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -27,6 +27,7 @@
             <a href="reviews.html">AllReviews</a>
             <a href="mylicenselogs.html">MyLicenseLogs</a>
             <a href="mylicenses.html">MyLicenses</a>
+            <a href="./pricing/wizard.html">PricingWizard</a>
             <a href="mycart.html?uid=1">MyCart</a>
             <a href="myprofile.html">MyProfile</a>
             <a href="testimonials.html">AdminTestimonials</a>
@@ -107,6 +108,7 @@
             <a href="#pricing">Pricing ▾</a>
             <ul class="dropdown-content">
                 <li><a href="#pricing">All Licenses</a></li>
+                <li><a href="./pricing/wizard.html">Wizard</a></li>
                 <li><a href="#pricing-enterprise">Enterprise</a></li>
                 <li><a href="#pricing-cloud">Cloud</a></li>
                 <li><a href="#pricing-onprem">On‑Premise</a></li>
