--- a/project/homepage/pricing/wizard.html
+++ b/project/homepage/pricing/wizard.html
@@ -130,14 +130,11 @@
 </nav>
     <div class="pageheader">
         <hr>
-        <span align="center"><h4>License Type Administrator</h4></span>
+        <span align="center"><h4> Pricing Wizard</h4></span>
         <hr>
     </div>
 
-
-
-<h1>Pricing Wizard</h1>
-
+<div style="margin-left: 30px;">
 <label>Product Type</label>
 <select id="productType">
   <option value="">-- Select Product --</option>
@@ -163,6 +160,7 @@
   <option value="premiseLic">On‑Premise Licenses</option>
   <option value="utility">Utility Model</option>
 </select>
+</div>
 
 <div id="results"></div>
 </div>
