--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -12,6 +12,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+.nav-tabs .nav-link.active {
+    background-color: #198754;
+    color: white;
+    border-color: #198754 #198754 #fff;
+}
+.nav-tabs .nav-link {
+    font-weight: 500;
+}
 </style>
 </head>
 
@@ -88,7 +96,6 @@
             </ul>
         </li>
 
-        <!-- ⭐ NEW PRICING MENU -->
         <li class="dropdown">
             <a href="#pricing">Pricing ▾</a>
             <ul class="dropdown-content">
@@ -104,222 +111,269 @@
     </ul>
 </nav>
 
-    <div class="pageheader">
-        <hr>
-        <span align="center"><h4>MyProfile</h4></span>
-        <hr>
-    </div>
+<div class="pageheader">
+    <hr>
+    <span align="center"><h4>MyProfile</h4></span>
+    <hr>
+</div>
 
-        <!-- ACTION BAR -->
-        <div class="action-bar mb-6" style="max-width: 1575px; margin: 0 auto;">
-            <button class="btn btn-green" id="editBtn">Edit Profile</button>
-            <button class="btn btn-black" id="refreshBtn">Refresh</button>
-        </div>
-    
-<!-- MAIN DATA GRID -->    
+<!-- ACTION BAR -->
+<div class="action-bar mb-6" style="max-width: 1575px; margin: 0 auto;">
+    <button class="btn btn-green" id="editBtn">Edit Profile</button>
+    <button class="btn btn-black" id="refreshBtn">Refresh</button>
+</div>
+
 <section class="top-section">
 
-        <!-- PROFILE DISPLAY CARD -->
-        <div class="card profile-card mb-4">
-            <div class="card-body" id="profileDisplay">
-                Loading profile...
-            </div>
+    <!-- PROFILE DISPLAY CARD WITH TABS -->
+    <div class="card profile-card mb-4">
+        <div class="card-header bg-success text-white fw-bold">
+            My Profile
         </div>
 
-        <!-- UPDATE PROFILE MODAL -->
-        <div class="modal fade" id="updateModal" tabindex="-1">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
+        <div class="card-body">
 
-                    <div class="modal-header table-header-green">
-                        <h5 class="modal-title">Update Profile</h5>
-                        <button class="btn-close" data-bs-dismiss="modal"></button>
-                    </div>
+            <ul class="nav nav-tabs" id="profileTabs" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="basics-tab" data-bs-toggle="tab"
+                        data-bs-target="#basics" type="button" role="tab">
+                        Basics
+                    </button>
+                </li>
 
-                    <div class="modal-body">
-                        <form id="updateForm" class="row g-3">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="social-tab" data-bs-toggle="tab"
+                        data-bs-target="#social" type="button" role="tab">
+                        Social Media
+                    </button>
+                </li>
 
-                            <!-- Basic Info -->
-                            <div class="profile-section-title">Basic Information</div>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="contactpref-tab" data-bs-toggle="tab"
+                        data-bs-target="#contactpref" type="button" role="tab">
+                        Contact Preferences
+                    </button>
+                </li>
+            </ul>
 
-                            <div class="col-md-6">
-                                <label class="profile-label">First Name</label>
-                                <input class="form-control" name="firstname">
-                            </div>
+            <div class="tab-content mt-3" id="profileTabsContent">
 
-                            <div class="col-md-6">
-                                <label class="profile-label">Last Name</label>
-                                <input class="form-control" name="lastname">
-                            </div>
-
-                            <div class="col-md-6">
-                                <label class="profile-label">Display Name</label>
-                                <input class="form-control" name="displayname">
-                            </div>
-
-                            <div class="col-md-6">
-                                <label class="profile-label">Username</label>
-                                <input class="form-control" name="username">
-                            </div>
-
-                            <!-- Contact -->
-                            <div class="profile-section-title">Contact</div>
-
-                            <div class="col-md-6">
-                                <label class="profile-label">Email</label>
-                                <input class="form-control" name="email">
-                            </div>
-
-                            <div class="col-md-6">
-                                <label class="profile-label">Phone</label>
-                                <input class="form-control" name="phone">
-                            </div>
-
-                            <div class="col-md-6">
-                                <label class="profile-label">Cell Phone</label>
-                                <input class="form-control" name="cellphone">
-                            </div>
-
-                            <!-- Address -->
-                            <div class="profile-section-title">Address</div>
-
-                            <div class="col-md-6">
-                                <label class="profile-label">Address 1</label>
-                                <input class="form-control" name="address1">
-                            </div>
-
-                            <div class="col-md-6">
-                                <label class="profile-label">Address 2</label>
-                                <input class="form-control" name="address2">
-                            </div>
-
-                            <div class="col-md-4">
-                                <label class="profile-label">City</label>
-                                <input class="form-control" name="city">
-                            </div>
-
-                            <div class="col-md-4">
-                                <label class="profile-label">State</label>
-                                <input class="form-control" name="state">
-                            </div>
-
-                            <div class="col-md-4">
-                                <label class="profile-label">Postal/Zip</label>
-                                <input class="form-control" name="postalzip">
-                            </div>
-
-                            <div class="col-md-6">
-                                <label class="profile-label">Country</label>
-                                <input class="form-control" name="country">
-                            </div>
-
-                        </form>
-                    </div>
-
-                    <div class="modal-footer">
-                        <button class="btn btn-black" data-bs-dismiss="modal">Cancel</button>
-                        <button class="btn btn-green-dark" id="saveBtn">Save Changes</button>
-                    </div>
-
+                <div class="tab-pane fade show active" id="basics" role="tabpanel">
+                    <div id="profileBasics">Loading...</div>
                 </div>
+
+                <div class="tab-pane fade" id="social" role="tabpanel">
+                    <div id="profileSocial">Loading...</div>
+                </div>
+
+                <div class="tab-pane fade" id="contactpref" role="tabpanel">
+                    <div id="profileContactPref">Loading...</div>
+                </div>
+
             </div>
         </div>
-<!-- Close TopSection -->
-    </section> 
-    <!-- Close Container -->
+    </div>
+
+    <!-- UPDATE PROFILE MODAL -->
+    <div class="modal fade" id="updateModal" tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+
+                <div class="modal-header table-header-green">
+                    <h5 class="modal-title">Update Profile</h5>
+                    <button class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+
+                <div class="modal-body">
+                    <form id="updateForm" class="row g-3">
+
+                        <div class="profile-section-title">Basic Information</div>
+
+                        <div class="col-md-6">
+                            <label class="profile-label">First Name</label>
+                            <input class="form-control" name="firstname">
+                        </div>
+
+                        <div class="col-md-6">
+                            <label class="profile-label">Last Name</label>
+                            <input class="form-control" name="lastname">
+                        </div>
+
+                        <div class="col-md-6">
+                            <label class="profile-label">Display Name</label>
+                            <input class="form-control" name="displayname">
+                        </div>
+
+                        <div class="col-md-6">
+                            <label class="profile-label">Username</label>
+                            <input class="form-control" name="username">
+                        </div>
+
+                        <div class="profile-section-title">Contact</div>
+
+                        <div class="col-md-6">
+                            <label class="profile-label">Email</label>
+                            <input class="form-control" name="email">
+                        </div>
+
+                        <div class="col-md-6">
+                            <label class="profile-label">Phone</label>
+                            <input class="form-control" name="phone">
+                        </div>
+
+                        <div class="col-md-6">
+                            <label class="profile-label">Cell Phone</label>
+                            <input class="form-control" name="cellphone">
+                        </div>
+
+                        <div class="profile-section-title">Address</div>
+
+                        <div class="col-md-6">
+                            <label class="profile-label">Address 1</label>
+                            <input class="form-control" name="address1">
+                        </div>
+
+                        <div class="col-md-6">
+                            <label class="profile-label">Address 2</label>
+                            <input class="form-control" name="address2">
+                        </div>
+
+                        <div class="col-md-4">
+                            <label class="profile-label">City</label>
+                            <input class="form-control" name="city">
+                        </div>
+
+                        <div class="col-md-4">
+                            <label class="profile-label">State</label>
+                            <input class="form-control" name="state">
+                        </div>
+
+                        <div class="col-md-4">
+                            <label class="profile-label">Postal/Zip</label>
+                            <input class="form-control" name="postalzip">
+                        </div>
+
+                        <div class="col-md-6">
+                            <label class="profile-label">Country</label>
+                            <input class="form-control" name="country">
+                        </div>
+
+                    </form>
+                </div>
+
+                <div class="modal-footer">
+                    <button class="btn btn-black" data-bs-dismiss="modal">Cancel</button>
+                    <button class="btn btn-green-dark" id="saveBtn">Save Changes</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+</section>
 </div>
 
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script>
-        const API_BASE = "https://api242.onrender.com";
+   const API_BASE = "https://api242.onrender.com";
 
-        // Load UID from localStorage or use default Mongo-generated ID
-        let uid = localStorage.getItem("uid");
+// Load UID from localStorage or use default Mongo-generated ID
+let uid = localStorage.getItem("uid");
 
-        if (!uid) {
-            uid = "6996382c2ee4254a4978d94c";
-            localStorage.setItem("uid", uid);
-        }
+if (!uid) {
+    uid = "6996382c2ee4254a4978d94c";
+    localStorage.setItem("uid", uid);
+}
 
-        // Load profile
-        async function loadProfile() {
-            console.log("GET URL:", `${API_BASE}/users/${uid}`);
+// Load profile
+async function loadProfile() {
+    console.log("GET URL:", `${API_BASE}/users/${uid}`);
 
-            const res = await fetch(`${API_BASE}/users/${uid}`);
-            const data = await res.json();
+    const res = await fetch(`${API_BASE}/users/${uid}`);
+    const data = await res.json();
 
-            console.log("GET Response:", data);
+    console.log("GET Response:", data);
 
-            window.profileData = data;
-            renderProfile(data);
-        }
+    window.profileData = data;
+    renderProfile(data);
+}
 
-        // Render profile into card
-        function renderProfile(p) {
-            document.getElementById("profileDisplay").innerHTML = `
-                <div class="profile-section-title">Basic Information</div>
-                <p><span class="profile-label">Name:</span> ${p.fullname}</p>
-                <p><span class="profile-label">Username:</span> ${p.username}</p>
-                <p><span class="profile-label">Display Name:</span> ${p.displayname}</p>
+// Render profile into tab sections
+function renderProfile(p) {
 
-                <div class="profile-section-title">Contact</div>
-                <p><span class="profile-label">Email:</span> ${p.email}</p>
-                <p><span class="profile-label">Phone:</span> ${p.phone}</p>
-                <p><span class="profile-label">Cell:</span> ${p.cellphone}</p>
+    // BASICS TAB
+    document.getElementById("profileBasics").innerHTML = `
+        <p><strong>Name:</strong> ${p.fullname}</p>
+        <p><strong>Username:</strong> ${p.username}</p>
+        <p><strong>Display Name:</strong> ${p.displayname}</p>
+    `;
 
-                <div class="profile-section-title">Address</div>
-                <p><span class="profile-label">Address:</span> ${p.address1} ${p.address2}</p>
-                <p><span class="profile-label">City:</span> ${p.city}</p>
-                <p><span class="profile-label">State:</span> ${p.state}</p>
-                <p><span class="profile-label">Postal:</span> ${p.postalzip}</p>
-                <p><span class="profile-label">Country:</span> ${p.country}</p>
-            `;
-        }
+    // SOCIAL MEDIA TAB
+    document.getElementById("profileSocial").innerHTML = `
+        <p><strong>LinkedIn:</strong> ${p.linkedin || "Not provided"}</p>
+        <p><strong>Twitter:</strong> ${p.twitter || "Not provided"}</p>
+        <p><strong>Facebook:</strong> ${p.facebook || "Not provided"}</p>
+        <p><strong>Instagram:</strong> ${p.instagram || "Not provided"}</p>
+    `;
 
-        // Open modal with existing values
-        document.getElementById("editBtn").onclick = () => {
-            const form = document.getElementById("updateForm");
+    // CONTACT PREFERENCES TAB
+    document.getElementById("profileContactPref").innerHTML = `
+        <p><strong>Email:</strong> ${p.email}</p>
+        <p><strong>Phone:</strong> ${p.phone}</p>
+        <p><strong>Cell:</strong> ${p.cellphone}</p>
+        <p><strong>Preferred Contact:</strong> ${p.preferredcontact || "Not set"}</p>
 
-            Object.keys(window.profileData).forEach(key => {
-                if (form[key]) form[key].value = window.profileData[key] || "";
-            });
+        <hr>
 
-            new bootstrap.Modal(document.getElementById("updateModal")).show();
-        };
+        <p><strong>Address:</strong> ${p.address1} ${p.address2 || ""}</p>
+        <p><strong>City:</strong> ${p.city}</p>
+        <p><strong>State:</strong> ${p.state}</p>
+        <p><strong>Postal:</strong> ${p.postalzip}</p>
+        <p><strong>Country:</strong> ${p.country}</p>
+    `;
+}
 
-        // Save changes
-        document.getElementById("saveBtn").onclick = async () => {
-            const form = document.getElementById("updateForm");
-            const formData = Object.fromEntries(new FormData(form).entries());
+// Open modal with existing values
+document.getElementById("editBtn").onclick = () => {
+    const form = document.getElementById("updateForm");
 
-            console.log("PUT URL:", `${API_BASE}/users/${uid}`);
-            console.log("PUT Payload:", formData);
+    Object.keys(window.profileData).forEach(key => {
+        if (form[key]) form[key].value = window.profileData[key] || "";
+    });
 
-            const res = await fetch(`${API_BASE}/users/${uid}`, {
-                method: "PUT",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(formData)
-            });
+    new bootstrap.Modal(document.getElementById("updateModal")).show();
+};
 
-            console.log("PUT Response Status:", res.status);
+// Save changes
+document.getElementById("saveBtn").onclick = async () => {
+    const form = document.getElementById("updateForm");
+    const formData = Object.fromEntries(new FormData(form).entries());
 
-            if (!res.ok) {
-                console.error("PUT failed:", await res.text());
-                alert("Error saving profile");
-                return;
-            }
+    console.log("PUT URL:", `${API_BASE}/users/${uid}`);
+    console.log("PUT Payload:", formData);
 
-            loadProfile();
-            bootstrap.Modal.getInstance(document.getElementById("updateModal")).hide();
-        };
+    const res = await fetch(`${API_BASE}/users/${uid}`, {
+        method: "PUT",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(formData)
+    });
 
-        document.getElementById("refreshBtn").onclick = loadProfile;
+    console.log("PUT Response Status:", res.status);
 
-        loadProfile();
-    </script>
+    if (!res.ok) {
+        console.error("PUT failed:", await res.text());
+        alert("Error saving profile");
+        return;
+    }
+
+    loadProfile();
+    bootstrap.Modal.getInstance(document.getElementById("updateModal")).hide();
+};
+
+document.getElementById("refreshBtn").onclick = loadProfile;
+
+loadProfile();
+</script>
 
 <footer>&copy2026 Greenville Associates Solutions, Inc</footer>
 </body>
