--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -20,6 +20,24 @@
 .nav-tabs .nav-link {
     font-weight: 500;
 }
+
+.profile-card {
+    width: 100% !important;
+    max-width: 100% !important;
+}
+
+.card-body {
+    width: 100% !important;
+}
+
+.tab-content {
+    width: 100% !important;
+}
+
+.tab-pane {
+    width: 100% !important;
+}
+
 </style>
 </head>
 
