--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -296,9 +296,9 @@
     </div>
 
 </section>
+<footer>&copy2026 Greenville Associates Solutions, Inc</footer>
 </div>
-
-
+<script>
 
    const API_BASE = "https://api242.onrender.com";
 
@@ -400,6 +400,6 @@ document.getElementById("refreshBtn").onclick = loadProfile;
 loadProfile();
 </script>
 
-<footer>&copy2026 Greenville Associates Solutions, Inc</footer>
+
 </body>
 </html>
