--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -28,14 +28,20 @@
 
 .card-body {
     width: 100% !important;
+    height: 500px;
+    max-height: 800px;
 }
 
 .tab-content {
     width: 100% !important;
+        height: 500px;
+    max-height: 800px;
 }
 
 .tab-pane {
     width: 100% !important;
+        height: 500px;
+    max-height: 800px;
 }
 
 </style>
