--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -66,10 +66,12 @@
 </div>
 
 <!-- ACTION BAR -->
-<div class="action-bar mb-6" style="max-width: 1575px; margin: 0 auto;">
-    <button class="btn btn-green" id="editBtn">Edit Profile</button>
+<div class="action-bar mb-6">
+    <button class="btn" id="editBtn">Edit Contacts</button>
+    <button class="btn btn-blue" id="editSocialBtn">Edit Social</button>
     <button class="btn btn-black" id="refreshBtn">Refresh</button>
 </div>
+
 
 <section class="top-section">
 
