--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -49,6 +49,20 @@
     padding-right: 100px;           /* 100px from right edge */
     gap: 12px;
 }
+.btn-blue {
+    background-color: #0d6efd;
+    color: white;
+    border: none;
+    padding: 10px 22px;
+    font-weight: 600;
+    border-radius: 6px;
+    transition: 0.2s ease-in-out;
+}
+
+.btn-blue:hover {
+    background-color: #0b5ed7;
+    transform: translateY(-1px);
+}
 
     
 </style>
