--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -137,6 +137,50 @@
             </div>
         </div>
     </div>
+<!-- UPDATE SOCIAL MEDIA MODAL -->
+<div class="modal fade" id="socialModal" tabindex="-1">
+    <div class="modal-dialog modal-md">
+        <div class="modal-content">
+
+            <div class="modal-header table-header-green">
+                <h5 class="modal-title">Edit Social Media</h5>
+                <button class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+            <div class="modal-body">
+                <form id="socialForm" class="row g-3">
+
+                    <div class="col-12">
+                        <label class="profile-label">LinkedIn</label>
+                        <input class="form-control" name="linkedin">
+                    </div>
+
+                    <div class="col-12">
+                        <label class="profile-label">Twitter</label>
+                        <input class="form-control" name="twitter">
+                    </div>
+
+                    <div class="col-12">
+                        <label class="profile-label">Facebook</label>
+                        <input class="form-control" name="facebook">
+                    </div>
+
+                    <div class="col-12">
+                        <label class="profile-label">Instagram</label>
+                        <input class="form-control" name="instagram">
+                    </div>
+
+                </form>
+            </div>
+
+            <div class="modal-footer">
+                <button class="btn btn-black" data-bs-dismiss="modal">Cancel</button>
+                <button class="btn btn-green-dark" id="saveSocialBtn">Save Social</button>
+            </div>
+
+        </div>
+    </div>
+</div>
 
     <!-- UPDATE PROFILE MODAL -->
     <div class="modal fade" id="updateModal" tabindex="-1">
