--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -24,6 +24,7 @@
     width: 100% !important;
     max-width: 1600px !important;
     margin: 0 auto;
+    font-size: 9pt;
 }
 .tab-content, .tab-pane {
     width: 100% !important;
