--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -25,6 +25,9 @@
     max-width: 1600px !important;
     margin: 0 auto;
     font-size: 9pt;
+    height: 500px;
+    max-height: 800px;
+    overflow-y: auto;
 }
 .tab-content, .tab-pane {
     width: 100% !important;
