--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -82,7 +82,13 @@
     background-color: #0b5ed7;
     transform: translateY(-1px);
 }
-
+.profile-card { 
+    width: 100%; 
+    max-width: 100%;
+} 
+.card-body { width: 100%; height: 600px;} 
+.tab-content { width: 100%; } 
+.tab-pane { width: 100%; height: 700px; }
     
 </style>
 </head>
