--- a/project/homepage/template.html
+++ b/project/homepage/template.html
@@ -7,7 +7,7 @@
     <!-- Corporate Styles -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script type="module" src="https://esm.run/@material/web/all.js"></script>
-    <link rel="stylesheet" href="./css/sites.css"></head> 
+    <link rel="stylesheet" href="./css/site.css"></head> 
     <link rel="stylesheet" href="./css/layout.css"></head> 
     <link rel="stylesheet" href="./css/greenville.css"></head> <!--Greenville Last Word on Colors and Styling -->
 <!-- Material Icons -->
