--- a/project/homepage/template.html
+++ b/project/homepage/template.html
@@ -9,6 +9,7 @@
     <script type="module" src="https://esm.run/@material/web/all.js"></script>
     <link rel="stylesheet" href="./css/site.css"></head> 
     <link rel="stylesheet" href="./css/layout.css"></head> 
+    <link rel="stylesheet" href="./css/greenvillemiddle.css"></head> 
     <link rel="stylesheet" href="./css/greenville.css"></head> <!--Greenville Last Word on Colors and Styling -->
 <!-- Material Icons -->
 </head>
