--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -120,6 +120,72 @@
     </ul>
 </nav>
 
+<!-- ========================= -->
+<!--     MIDDLE CONTENT        -->
+<!-- ========================= -->
+<section class="main-content">
+
+    <!-- GRID DATA SECTION -->
+    <div id="griddata" class="griddata">
+        <h2>Results</h2>
+
+        <div class="griddata-table">
+            <!-- REST API results will be injected here -->
+            <div class="grid-row">
+                <span>Record 1</span>
+                <span>Status: OK</span>
+                <span>Updated: Today</span>
+            </div>
+
+            <div class="grid-row">
+                <span>Record 2</span>
+                <span>Status: Pending</span>
+                <span>Updated: Yesterday</span>
+            </div>
+
+            <div class="grid-row">
+                <span>Record 3</span>
+                <span>Status: Error</span>
+                <span>Updated: 2 days ago</span>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- FEATURES SECTION -->
+    <div id="features" class="features">
+        <h2>Features</h2>
+
+        <div class="feature-grid">
+
+            <a href="feature1.html" class="feature-card">
+                <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
+                <h3 style="text-align: center;">Analytics Dashboard</h3>
+                <p>Real‑time insights and reporting tools.</p>
+            </a>
+
+            <a href="feature2.html" class="feature-card">
+                <img src="./images/image2.png" width="50px" height="50px" alt="Feature Icon">
+                <h3 style="text-align: center;">Identity Management</h3>
+                <p>Secure authentication and access control.</p>
+            </a>
+
+            <a href="feature3.html" class="feature-card">
+                <img src="./images/image3.png" width="50px" height="50px" alt="Feature Icon">
+                <h3 style="text-align: center;">Automation Tools</h3>
+                <p>Streamline workflows across your enterprise.</p>
+            </a>
+
+            <a href="feature4.html" class="feature-card">
+                <img src="./images/image4.png" width="50px" height="50px" alt="Feature Icon">
+                <h3 style="text-align: center;">API Gateway</h3>
+                <p>Manage and secure your enterprise APIs.</p>
+            </a>
+
+        </div>
+    </div>
+
+</section>
 
 
 <section id="products">
@@ -470,6 +536,7 @@
 </div>
 </body>
 </html>
+
 
 
 
