--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -7,6 +7,7 @@
 <script type="module" src="https://esm.run/@material/web/button/text-button.js"></script>
 <link rel="stylesheet" href="./css/site.css"> 
 <link rel="stylesheet" href="./css/layout.css"> 
+<link rel="stylesheet" href="./css/greenvillemiddle.css">  
 <link rel="stylesheet" href="./css/greenville.css">  
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -536,6 +537,7 @@
 </div>
 </body>
 </html>
+
 
 
 
