--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -128,7 +128,7 @@
 
     <!-- GRID DATA SECTION -->
     <div id="griddata" class="griddata">
-        <h2>Results</h2>
+        <h2>@CurrentReleases</h2>
 
         <div class="griddata-table">
             <!-- REST API results will be injected here -->
@@ -161,28 +161,39 @@
 
             <a href="feature1.html" class="feature-card">
                 <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
-                <h3 style="text-align: center;">Analytics Dashboard</h3>
+                <h3 style="text-align: center;">FusionBasics</h3>
                 <p>Real‑time insights and reporting tools.</p>
             </a>
 
             <a href="feature2.html" class="feature-card">
                 <img src="./images/image2.png" width="50px" height="50px" alt="Feature Icon">
-                <h3 style="text-align: center;">Identity Management</h3>
+                <h3 style="text-align: center;">Deployment Options</h3>
                 <p>Secure authentication and access control.</p>
             </a>
 
             <a href="feature3.html" class="feature-card">
                 <img src="./images/image3.png" width="50px" height="50px" alt="Feature Icon">
-                <h3 style="text-align: center;">Automation Tools</h3>
+                <h3 style="text-align: center;">LicenseTypes</h3>
                 <p>Streamline workflows across your enterprise.</p>
             </a>
 
             <a href="feature4.html" class="feature-card">
                 <img src="./images/image4.png" width="50px" height="50px" alt="Feature Icon">
-                <h3 style="text-align: center;">API Gateway</h3>
+                <h3 style="text-align: center;">Pricing Wizard</h3>
                 <p>Manage and secure your enterprise APIs.</p>
             </a>
+				<a href="feature1.html" class="feature-card">
+                <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
+                <h3 style="text-align: center;">MyLicenses</h3>
+                <p>Manage and secure your licenses, and monitor real time stats.</p>
+            </a>
 
+				<a href="feature1.html" class="feature-card">
+                <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
+                <h3 style="text-align: center;">CorporateLicenses</h3>
+                <p>Manage and secure your enterprise Licenses across the world.</p>
+            </a>
+			
         </div>
     </div>
 
@@ -537,6 +548,7 @@
 </div>
 </body>
 </html>
+
 
 
 
