--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -155,7 +155,7 @@
 
     <!-- FEATURES SECTION -->
     <div id="features" class="features">
-        <h2>Features</h2>
+        <h2>Explore</h2>
 
         <div class="feature-grid">
 
@@ -188,6 +188,50 @@
                 <p>Manage and secure your licenses, and monitor real time stats.</p>
             </a>
 
+				<a href="feature1.html" class="feature-card">
+                <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
+                <h3 style="text-align: center;">CorporateLicenses</h3>
+                <p>Manage and secure your enterprise Licenses across the world.</p>
+            </a>
+			
+        </div>
+		<!-- FEATURES SECTION -->
+    <div id="features" class="features">
+        <h2>Explore</h2>
+
+        <div class="feature-grid">
+            <a href="feature1.html" class="feature-card">
+                <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
+                <h3 style="text-align: center;">FusionBasics</h3>
+                <p>Real‑time insights and reporting tools.</p>
+            </a>
+
+            <a href="feature2.html" class="feature-card">
+                <img src="./images/image2.png" width="50px" height="50px" alt="Feature Icon">
+                <h3 style="text-align: center;">Deployment Options</h3>
+                <p>Secure authentication and access control.</p>
+            </a>
+
+            <a href="feature3.html" class="feature-card">
+                <img src="./images/image3.png" width="50px" height="50px" alt="Feature Icon">
+                <h3 style="text-align: center;">LicenseTypes</h3>
+                <p>Streamline workflows across your enterprise.</p>
+            </a>
+
+            <a href="feature4.html" class="feature-card">
+                <img src="./images/image4.png" width="50px" height="50px" alt="Feature Icon">
+                <h3 style="text-align: center;">Pricing Wizard</h3>
+                <p>Manage and secure your enterprise APIs.</p>
+            </a>
+		</div>
+			<!-- FEATURES SECTION -->
+    <div id="features" class="features">
+        <h2>Explore</h2>
+				<a href="feature1.html" class="feature-card">
+                <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
+                <h3 style="text-align: center;">MyLicenses</h3>
+                <p>Manage and secure your licenses, and monitor real time stats.</p>
+            </a>
 				<a href="feature1.html" class="feature-card">
                 <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
                 <h3 style="text-align: center;">CorporateLicenses</h3>
@@ -548,6 +592,7 @@
 </div>
 </body>
 </html>
+
 
 
 
