--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -182,10 +182,12 @@
                 <h3 style="text-align: center;">Pricing Wizard</h3>
                 <p>Manage and secure your enterprise APIs.</p>
             </a>
-			
+		</div>
         </div>
 			<!-- SECOND FEATURES SECTION -->
     <div id="features" class="features">
+      <div class="feature-grid">
+
         <h2>Manage</h2>
 				<a href="feature1.html" class="feature-card">
                 <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
@@ -552,6 +554,7 @@
 </div>
 </body>
 </html>
+
 
 
 
