--- a/project/homepage/template.html
+++ b/project/homepage/template.html
@@ -19,7 +19,8 @@
     <div class="dropdown">
         <button class="dropbtn" style="background-color: black;">Menu ▼</button>
         <div class="dropdown-content">
-               <a href="login.html">Login</a>
+          <a href="index.html">Home</a>
+			<a href="login.html">Login</a>
             <a href="logout.html">Logout</a>
             <a href="welcome.html">Welcome</a>
             <a href="licenses6.html">BuyNow</a>
@@ -32,6 +33,7 @@
             <a href="testimonials.html">AdminTestimonials</a>
             <a href="products.html">AdminProducts</a>
             <a href="licensetypes.html">AdminLicenseTypes</a>
+	   		<a href="template.html">AdminPageTemplate</a>
         </div>
     </div>
 
