--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -97,7 +97,7 @@
 <div class="container2">
     <div class="topnav">
     <div class="dropdown">
-        <button class="dropbtn">Menu ▼</button>
+        <button class="dropbtn"><img src="./images/jsmenu4.png"></button>
         <div class="dropdown-content">
             <a href="index.html">Home</a>
 			<a href="login.html">Login</a>
