--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -148,7 +148,7 @@
 </div>
 </div>
 <header>
-    <h1>Greenville Enterprise Software</h1>
+    <h1>Greenville Enterprise Operations</h1>
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
