--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -558,8 +558,20 @@
     © 2026 Greenville Associates Enterprise Software. All rights reserved.
 </footer>
 </div>
+<script type="module">
+  import { createTheme } from "https://cdn.jsdelivr.net/npm/@mui/material@latest/+esm";
+
+  const theme = createTheme({
+    spacing: 2
+  });
+
+  // Inject CSS variables into :root
+theme.spacing(2); // `${4 * 2}px` = '8px'
+</script>
+
 </body>
 </html>
+
 
 
 
