--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -97,7 +97,7 @@
 <div class="container2">
     <div class="topnav">
     <div class="dropdown">
-        <button class="dropbtn"><img src="./images/greenmenu5.png" width="13px" height="13px"></button>
+        <button class="dropbtn" style="border: none; height=15px; width=15px;"><img src="./images/greenmenu5.png" width="13px" height="13px"></button>
         <div class="dropdown-content">
             <a href="index.html">Home</a>
 			<a href="login.html">Login</a>
