--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -120,7 +120,7 @@
     </div>
 
         <!-- BUTTON BAR ABOVE THE GRID -->
-    <div class="mb-3 w-100 text-start">
+    <div align="right" style="margin: 30px 120px;">
         <button class="btn btn-success custom-add-btn" data-bs-toggle="modal" data-bs-target="#insertModal">
             Add License
         </button>
@@ -133,7 +133,7 @@
 <!-- ===================== LICENSE TABLE ===================== -->
 <section class="top-section">
 
-    <div class="card mb-4">
+    <div class="card mb-10">
         <div class="card-header table-header-green">
             <span>All Licenses</span>
         </div>
