--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -12,7 +12,8 @@
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-   
+   .right-links { padding: var(--space-1); /* becomes 4px */ 
+				 margin-bottom: var(--space-2); /* becomes 16px */ }
 </style>
 </head>
 <body>
@@ -571,6 +572,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
