--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -13,7 +13,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
    .right-links { padding: var(--space-1); /* becomes 4px */ 
-				 margin-bottom: var(--space-2); /* becomes 16px */ }
+				 margin-bottom: var(--space-2); /* becomes 16px */ 
+				gap: 4px;
+				}
 </style>
 </head>
 <body>
@@ -572,6 +574,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
