--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -133,18 +133,21 @@
                 <span>Record 1</span>
                 <span>Status: OK</span>
                 <span>Updated: Today</span>
+				<span>Updated: Today</span>
             </div>
 
             <div class="grid-row">
                 <span>Record 2</span>
                 <span>Status: Pending</span>
                 <span>Updated: Yesterday</span>
+				<span>Updated: Today</span>
             </div>
 
             <div class="grid-row">
                 <span>Record 3</span>
                 <span>Status: Error</span>
                 <span>Updated: 2 days ago</span>
+				<span>Updated: Today</span>
             </div>
         </div>
     </div>
@@ -574,6 +577,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
